# metube

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  PLAN.md  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
app/: auth.py  cookies_db.py  dl_formats.py  job_db.py  job_manager.py  job_models.py  job_worker.py  logs_db.py  main.py  state_store.py  ytdl.py
app/tests/: conftest.py  test_api.py  test_config.py  test_dl_formats.py  test_download_queue.py  test_job_db.py  test_job_manager.py  test_main_helpers.py  test_persistent_queue.py  test_ytdl_utils.py
ui/: index.html  login.html  main.js  styles.css
