[project]
name = "metube"
version = "0.1.0"
description = "Web GUI for youtube-dl (using yt-dlp) with playlist support"
requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "pydantic>=2",
    "pydantic-settings",
    "yt-dlp[default,curl-cffi,deno]",
]

[dependency-groups]
dev = [
    "pylint",
    "pytest>=8.0",
    "pytest-aiohttp>=1.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = [".", "app"]
addopts = "-v"
