[project]
name = "metube"
version = "0.1.0"
description = "Web GUI for youtube-dl (using yt-dlp) with playlist support"
requires-python = ">=3.13"
dependencies = [
    "bottle",
    "waitress",
    "pydantic>=2",
    "pydantic-settings",
    "yt-dlp[default,curl-cffi,deno]",
]

[dependency-groups]
dev = [
    "pylint",
    "pytest>=8.0",
    "webtest",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = [".", "app"]
addopts = "-v"
